--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "common"]
 	path = common
-	url = git://github.com/fpommerening/presentation.git
+	url = https://github.com/fpommerening/presentation.git
