--- a/Samples/OpenFAAS/HalloCSharp/docker-compose.yml
+++ b/Samples/OpenFAAS/HalloCSharp/docker-compose.yml
@@ -51,7 +51,7 @@ services:
     # Sample functions go here.
 
     # Service label of "function" allows functions to show up in UI on http://gateway:8080/
-    hallocsharp:
+    hallo:
         image: fpommerening/devopenspace2017:hallocsharp
         labels:
             function: "true"
