--- a/Samples/BuildMultistage/WebApp/BuildMultistage.csproj
+++ b/Samples/BuildMultistage/WebApp/BuildMultistage.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <RootNamespace>FP.DevSpace2017.BuildMultistage</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Nancy" Version="2.0.0-clinteastwood" />
