--- a/Samples/BuildOutside/src/WebApp/BuildOutside.csproj
+++ b/Samples/BuildOutside/src/WebApp/BuildOutside.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <RootNamespace>FP.DevSpace2017.BuildOutside</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Nancy" Version="2.0.0-clinteastwood" />
