--- a/Samples/OpenFAAS/HalloCSharp/src/HalloCSharp.csproj
+++ b/Samples/OpenFAAS/HalloCSharp/src/HalloCSharp.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <RootNamespace>FP.DevSpace2017.OpenFAAS.Hallo</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
   </ItemGroup>
