--- a/samples/OpenFAAS/ConsoleArgsCSharp/src/ConsoleArgsCSharp.csproj
+++ b/samples/OpenFAAS/ConsoleArgsCSharp/src/ConsoleArgsCSharp.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <RootNamespace>FP.DevSpace2017.OpenFAAS.ConsoleArgs</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
   </ItemGroup>
