--- a/Samples/OpenFAAS/AlexaCSharp/Dockerfile
+++ b/Samples/OpenFAAS/AlexaCSharp/Dockerfile
@@ -2,7 +2,7 @@ FROM microsoft/dotnet:2.0.0-sdk-jessie AS builder
 
 WORKDIR /app
 COPY src /app
-RUN dotnet restore Alexa.csproj
+RUN dotnet restore AlexaCSharp.csproj
 RUN dotnet publish --configuration Release --output ./out
 
 
@@ -16,4 +16,4 @@ COPY --from=builder /app/out/* ./
 ENV ASPNETCORE_URLS http://0.0.0.0:8080
 EXPOSE 8080
 
-ENTRYPOINT ["dotnet", "Alexa.dll"]
+ENTRYPOINT ["dotnet", "AlexaCSharp.dll"]
