--- a/Samples/OpenFAAS/AlexaCSharp/src/AlexaCSharp.csproj
+++ b/Samples/OpenFAAS/AlexaCSharp/src/AlexaCSharp.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <RootNamespace>FP.DevSpace2017.BuildInside</RootNamespace>
+    <RootNamespace>FP.DevSpace2017.Alexa</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Nancy" Version="2.0.0-clinteastwood" />
