--- a/Samples/OpenFAAS/AlexaCSharp/docker-compose.yml
+++ b/Samples/OpenFAAS/AlexaCSharp/docker-compose.yml
@@ -52,8 +52,8 @@ services:
 
     # Service label of "function" allows functions to show up in UI on http://gateway:8080/
     alexa:
-        #image: fpommerening/devopenspace2017:alexacsharp
-        image: alexacsharp:latest
+        image: fpommerening/devopenspace2017:alexacsharp
+        #image: alexacsharp:latest
         labels:
             function: "true"
         depends_on:
